--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -8,6 +8,8 @@
             <p class="post-body">{{post.body}}</p>
         </div>
         
+        <img src="http://placeimg.com/400/400/nature" alt="" class="post-img" srcset="">
+
         <app-comments [postID]="post.id"></app-comments>
         
     </div>
