--- a/src/app/components/comments/comments.component.scss
+++ b/src/app/components/comments/comments.component.scss
@@ -15,6 +15,23 @@
     cursor: pointer;
 }
 
+.btn-plain-orange {
+    font-size: 16px;
+    color: rgb(190, 190, 190);
+    border: none;
+    background: transparent;  
+    color: #ff8700;
+}
+
+.btn-plain-orange:hover {
+    
+    cursor: pointer;
+}
+
+.editing {
+    box-shadow: 0px 0px 20px -10px #ffb057;
+}
+
 .comments {
     margin: 20px 20px;
 
@@ -41,7 +58,6 @@
             color: whitesmoke;
             font-size: 16px;
             width: 100%;
-            min-height: 85px;
         }
     }
     
@@ -55,7 +71,7 @@
 }
 .new-comment {
     display: grid;
-    grid-template-columns: 90% auto;
+    grid-template-columns: auto 35px;
     align-content: center;
     margin: 15px;
     padding: 5px 10px;
@@ -63,6 +79,7 @@
     background: rgb(79, 87, 87);
     
     .input-new-comment {
+        align-self: center;
         border: none;
         background: transparent;
         font-size: 16px;
@@ -71,8 +88,14 @@
     }
 
     .send {
-        height: 30px;
+        justify-self: left;
+        align-self: flex-end;
         transition: all 300ms;
+
+        svg {
+            width: 30px;
+        }
+        
     }
     .send:hover {
         scale: 1.1;
