--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -1,6 +1,6 @@
 .container {
-    background: rgb(51, 51, 51);
-    width: 40%;
+    background: rgb(77, 77, 77);
+    width: 60%;
     margin: 0px auto;
     margin-top: 50px;
     margin-bottom: 50px;
@@ -37,5 +37,17 @@
         grid-column: 1/3;
         margin: 10px 10px 0px 10px;
         color: whitesmoke;
+    }
+}
+
+@media (max-width: 1000px) {
+    .container {
+        width: 80%;
+    }
+}
+
+@media (max-width: 750px) {
+    .container {
+        width: 90%;
     }
 }
