--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -3,7 +3,7 @@
     <div class="container" *ngFor="let post of data">
         
         <div class="container-post">
-            <img src="../../../assets/avatar-svgrepo-com.svg" class="img-post" alt="">
+            <img src="./assets/avatar-svgrepo-com.svg" class="img-post" alt="">
             <span class="post-name">{{post.title}}</span>
             <p class="post-body">{{post.body}}</p>
         </div>
